feat: implement maintenance windows
- Add MaintenanceRepository with isInMaintenance, getUpcomingMaintenance, syncFromConfig
- Update incident-detector to skip incident creation during maintenance
- Update monitor-repository to sync maintenance windows from config
- Add maintenance status to /api/monitors and /api/monitors/:id endpoints
- Add maintenance types to frontend (MaintenanceWindow, ActiveMaintenance)
- Show maintenance status in MonitorRow with Wrench icon
- Add maintenance banner on MonitorDetailPage
- Update config.yml to use system theme mode

--- a/config/config.yml
+++ b/config/config.yml
@@ -9,7 +9,7 @@ app:
 # UI/UX settings
 ui:
   theme:
-    default_mode: "dark"
+    default_mode: "system"
   colors:
     primary_accent: "#f04a00"
     secondary_accent: "#E4B62C"
