--- a/config/monitors.yml
+++ b/config/monitors.yml
@@ -8,7 +8,7 @@ monitors:
     public: true
     conditions:
       - "[STATUS] == 200"
-      - "[RESPONSE_TIME] < 500"
+      - "[RESPONSE_TIME] < 1000"
       - "[CERTIFICATE_EXPIRATION] > 7d"
   - id: 2
     name: deep.simonschubert.com
@@ -19,8 +19,19 @@ monitors:
     public: true
     conditions:
       - "[STATUS] == 200"
-      - "[RESPONSE_TIME] < 500"
+      - "[RESPONSE_TIME] < 1000"
       - "[CERTIFICATE_EXPIRATION] > 7d"
+    maintenance:
+      - type: daily
+        start_time: "09:00"
+        end_time: "09:10"
+        timezone: "Europe/Berlin"
+        description: "Scheduled podcast site rebuild"
+      - type: daily
+        start_time: "21:00"
+        end_time: "21:10"
+        timezone: "Europe/Berlin"
+        description: "Scheduled podcast site rebuild"
   - id: 3
     name: n8n.simonschubert.com
     group: "Core Services"
@@ -30,7 +41,7 @@ monitors:
     public: true
     conditions:
       - "[STATUS] == 200"
-      - "[RESPONSE_TIME] < 500"
+      - "[RESPONSE_TIME] < 1000"
       - "[CERTIFICATE_EXPIRATION] > 7d"
   - id: 4
     name: recipes.simonschubert.com
@@ -41,11 +52,11 @@ monitors:
     public: true
     conditions:
       - "[STATUS] == 200"
-      - "[RESPONSE_TIME] < 500"
+      - "[RESPONSE_TIME] < 1000"
       - "[CERTIFICATE_EXPIRATION] > 7d"
     maintenance:
-      - start: "2026-01-11 02:00"
-        end: "2026-01-11 04:00"
+      - start: "2026-01-15 02:00"
+        end: "2026-01-15 04:00"
         timezone: "Europe/Berlin"
         description: "maintenance"
 
