--- a/config/config.example.yml
+++ b/config/config.example.yml
@@ -7,23 +7,10 @@ app:
   noindex: false
 
 # UI/UX settings
+# Note: Colors are defined in client/src/styles/index.css
 ui:
   theme:
     default_mode: "auto"  # auto, light, or dark
-  colors:
-    primary_accent: "#3b82f6"
-    secondary_accent: "#6366f1"
-    background_light: "#F5F5F5"
-    background_dark: "#1f2937"
-    text_on_light: "#000000"
-    text_on_light_secondary: "#333333"
-    text_on_dark: "#F5F5F5"
-    text_on_dark_secondary: "#e0e0e0"
-    gray_light: "#e0e0e0"
-    gray_dark: "#ACACAC"
-    success_color: "#10b981"
-    warning_color: "#f59e0b"
-    danger_color: "#ef4444"
   charts:
     show_response_time: true
     show_uptime_bars: true
