Improve admin page layout and add customizable footer
- Remove Status nav from admin header
- Make admin title a plain text (not a link)
- Remove 'Status Overview' header section from admin page
- Add Status Updates section to admin page with incident timeline
- Add customizable footer to both public and admin pages
- Footer supports custom text and external links from config.yml
- Update config.example.yml with footer configuration example

--- a/config/config.example.yml
+++ b/config/config.example.yml
@@ -41,6 +41,18 @@ data:
   retention_days: 90             # Keep individual checks for 90 days (7-365)
   incidents_retention_days: 365  # Keep resolved incidents for 1 year (30-730)
 
+# Footer configuration (optional)
+# Customize the footer text and add navigation links
+footer:
+  text: "Powered by Status Page"
+  # links:
+  #   - label: "Documentation"
+  #     url: "https://docs.example.com"
+  #   - label: "Support"
+  #     url: "https://support.example.com"
+  #   - label: "Privacy Policy"
+  #     url: "https://example.com/privacy"
+
 # Status page announcements (optional)
 # Display banners at the top of the status page for scheduled maintenance,
 # important updates, or other communications
