--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   postgres:
     image: postgres:16-alpine
-    container_name: status-page-db
+    container_name: statusbeacon-db
     environment:
       POSTGRES_USER: status_user
       POSTGRES_PASSWORD: status_pass
@@ -22,7 +22,7 @@ services:
 
   redis:
     image: redis:7-alpine
-    container_name: status-page-redis
+    container_name: statusbeacon-redis
     ports:
       - "6379:6379"
     networks:
@@ -35,7 +35,7 @@ services:
 
   app:
     build: .
-    container_name: status-page-app
+    container_name: statusbeacon-app
     ports:
       - "3000:3000"
     environment:
