--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "status-page",
+  "name": "statusbeacon",
   "version": "0.1.0",
   "description": "Lightweight self-hosted status page for monitoring services",
   "type": "module",
@@ -12,6 +12,7 @@
     "type-check": "tsc --noEmit"
   },
   "keywords": [
+    "statusbeacon",
     "status-page",
     "monitoring",
     "uptime"
